Made uniform return values

--- a/Kapitel/02_App/03_Map/01_View/LevelChangeDisplay/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/LevelChangeDisplay/main.tex
@@ -26,7 +26,7 @@ Dazu wird dies dem LevelChangeController mitgeteilt.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ onClickDown()}}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -39,7 +39,7 @@ Dazu wird dies dem LevelChangeController mitgeteilt.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{Weitere private Funktionalität}%$$$M
 Beobachtete Daten von LevelChangeController und Funktionalität:
