--- a/Kapitel/02_App/03_Map/02_ViewModel/LevelChangeController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/LevelChangeController/main.tex
@@ -18,7 +18,7 @@ Ist dies nicht der Fall, passiert nichts.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ changeLevelDown()}}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -30,7 +30,7 @@ Ist dies nicht der Fall, passiert nichts.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ isHighestLevel() : LiveData<boolean>}}%$$$M
 \paragraph*{Beschreibung}
@@ -38,7 +38,7 @@ Gibt an, ob die aktuelle Etage die oberste Etage im Gebäude ist.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-LiveData<boolean>, ob die aktuelle Etage die oberste Etage im Gebäude ist.
+\texttt{LiveData<boolean>}, ob die aktuelle Etage die oberste Etage im Gebäude ist.
 
 \subsubsection*{\texttt{+ isLowestLevel() : LiveData<boolean>}}%$$$M
 \paragraph*{Beschreibung}
@@ -46,7 +46,7 @@ Gibt an, ob die aktuelle Etage die unterste Etage im Gebäude ist.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-LiveData<boolean>, ob die aktuelle Etage die unterste Etage im Gebäude ist.
+\texttt{LiveData<boolean>}, ob die aktuelle Etage die unterste Etage im Gebäude ist.
 
 \subsubsection*{\texttt{+ getLevel() : LiveData<int>}}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -58,7 +58,7 @@ m-te Untergeschoss -m zurückgegeben.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-LiveData<int>, Nummer der aktuellen Etage.
+\texttt{LiveData<int>}, Nummer der aktuellen Etage.
 
 \subsubsection*{\texttt{+ isLevelMode() : LiveData<boolean>}}%$$$M
 \paragraph*{Beschreibung}
@@ -66,4 +66,4 @@ Gibt zurück, ob sich die Karte gerade im Etagenmodus befindet.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-LiveData<boolean> ob sich die Karte gerade im Etagenmodus befindet.
+\texttt{LiveData<boolean>} ob sich die Karte gerade im Etagenmodus befindet.
