--- a/Kapitel/02_App/03_Map/02_ViewModel/LevelModeController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/LevelModeController/main.tex
@@ -29,4 +29,4 @@ Ist dies nicht der Fall oder wurde in dieser Kartenmodus-Session noch keine Etag
     \item \texttt{mapId : int} MapId des Gebäudes.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
