--- a/Kapitel/02_App/03_Map/03_Model/DisplayDataProvider/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/DisplayDataProvider/main.tex
@@ -10,7 +10,7 @@ Gibt die Anzeigedaten für alle Gebäude zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-LiveData<List<DisplayData>>, DisplayData für alle Gebäude.
+\texttt{LiveData<List<DisplayData>>}, DisplayData für alle Gebäude.
 
 \subsubsection*{\texttt{+ getRoomDisplayData(mapId : int, level : int) : LiveData<List<DisplayData>>}}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -24,4 +24,4 @@ Die Liste ist leer, wenn es keine hinterlegten Räume gibt.
     \item \texttt{level : int} Stockwerk.
 \end{itemize}
 \paragraph*{Rückgabewert}
-LiveData<List<DisplayData>>, DisplayData für Räume einer Etage.
+\texttt{LiveData<List<DisplayData>>}, DisplayData für Räume einer Etage.
