--- a/Kapitel/02_App/03_Map/03_Model/TileSourceProvider/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/TileSourceProvider/main.tex
@@ -12,7 +12,7 @@ Diese Klasse stellt die \href{https://osmdroid.github.io/osmdroid/javadocAll/org
 \paragraph*{Beschreibung}
 Gibt eine \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
 {ITileSource} mit den Kartendaten für das Stockwerk eines Gebäudes zurück.\\
-Existiert die angeforderte Etagenkarte nicht auf dem Gerät, wird null zurückgegeben.
+Existiert die angeforderte Etagenkarte nicht auf dem Gerät, wird \texttt{null} zurückgegeben.
 \paragraph*{Parameter}
 \begin{itemize}
     \item \texttt{mapId : int} MapId des Gebäudes.
@@ -20,7 +20,7 @@ Existiert die angeforderte Etagenkarte nicht auf dem Gerät, wird null zurückge
 \end{itemize}
 \paragraph*{Rückgabewert}
 \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
-{ITileSource} mit den Kartendaten für die Etage oder null.
+{ITileSource} mit den Kartendaten für die Etage oder \texttt{null}.
 
 \subsubsection*{\texttt{+ getBuildingTileSource() : \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
 {ITileSource}}}%$$$M
