--- a/Kapitel/02_App/04_AddAlias/Klassen/GlobalAliasManager/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/GlobalAliasManager/main.tex
@@ -17,7 +17,7 @@ Reicht einen Alias-Vorschlag beim Server ein.
     \item \texttt{alias : String} Bezeichner.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ getAliasSuggestions(mapId : int) : List<String>}}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -30,7 +30,7 @@ die vom Benutzer noch bewertet werden dürfen.
     \item \texttt{mapId : int} MapId des Kartenobjekts.
 \end{itemize}
 \paragraph*{Rückgabewert}
-List<String>, Liste der Alias-Vorschläge.
+\texttt{List<String>}, Liste der Alias-Vorschläge.
 
 \subsubsection*{\texttt{+ sendAliasFeedback(mapId : int, suggestion : String, feedback : SuggestionFeedback)}}%$$$M
 \paragraph*{Exceptions}
@@ -45,4 +45,4 @@ Diese Methode sendet das Feedback zu einem Alias-Vorschlag an den Server.
     \item \texttt{feedback : SuggestionFeedback} Feedback.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
