--- a/Kapitel/02_App/04_AddAlias/Klassen/LocalAliasManager/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/LocalAliasManager/main.tex
@@ -15,7 +15,7 @@ Erstellt und speichert einen neuen lokalen Alias.
     \item \texttt{alias : String} Alias.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ deleteLocalAlias(mapId : int, alias : String)}}%$$$M
 \paragraph*{Beschreibung}
@@ -26,7 +26,7 @@ Löscht einen lokalen Alias. Existiert er nicht, passiert nichts.
     \item \texttt{alias : String} Alias der zu löschen ist.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ getLocalAliases(mapId : int) : LiveData<List<String>>}}%$$$M
 \paragraph*{Beschreibung}
@@ -36,7 +36,7 @@ Gibt eine Liste aller lokalen Aliasse eines Kartenobjekts zurück.
     \item \texttt{mapId : int} MapId des Kartenobjekts.
 \end{itemize}
 \paragraph*{Rückgabewert}
-LiveData<List<String>>, Liste der lokalen Aliasse.
+\texttt{LiveData<List<String>>}, Liste der lokalen Aliasse.
 
 \subsubsection*{\texttt{+ getGlobalAliases(mapId : int) : List<String>}}%$$$M
 \paragraph*{Beschreibung}
@@ -46,4 +46,4 @@ Gibt eine Liste aller globalen Aliasse eines Kartenobjekts zurück.
     \item \texttt{mapId : int} MapId des Kartenobjekts.
 \end{itemize}
 \paragraph*{Rückgabewert}
-List<String>, Liste der globalen Aliasse.
+\texttt{List<String>}, Liste der globalen Aliasse.
