--- a/Kapitel/02_App/05_Search/Klassen/SearchScreen/main.tex
+++ b/Kapitel/02_App/05_Search/Klassen/SearchScreen/main.tex
@@ -17,7 +17,7 @@ Veranlasst bei Betätigung des \dq Zurück-Knopfs \dq{} das Schließen der Suchl
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ onClickReturn}}%$$$M
 \paragraph*{Beschreibung}
@@ -25,7 +25,7 @@ Veranlasst bei Betätigung der Zurückgehen-Funktion des Endgeräts das Schließ
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ onClickSearchSuggestion}}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -38,7 +38,7 @@ Und veranlasst das Anzeigen des Kartenobjekts zu dem ausgewählten Suchvorschlag
     \item \texttt{searchKey : String} Die Zeichenkette, die der Benutzer eingetippt hat.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ onClickEnter}}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -51,7 +51,7 @@ Und veranlasst das Anzeigen des Kartenobjekts zu dem obersten angezeigten Suchvo
     \item \texttt{searchKey : String} Die Zeichenkette, die der Benutzer eingetippt hat.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ onClickKeyboard}}%$$$M
 \paragraph*{Beschreibung}
@@ -61,7 +61,7 @@ Veranlasst das Aktualisieren der angezeigten Suchvorschläge entsprechend der ak
     \item \texttt{searchInput : String} Die Zeichenkette, die der Benutzer eingetippt hat.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 
 \subsubsection*{Bibliothek SearchView}
