--- a/Kapitel/02_App/06_Signup/Klassen/ISignInController/main.tex
+++ b/Kapitel/02_App/06_Signup/Klassen/ISignInController/main.tex
@@ -10,7 +10,7 @@ Gibt eine Liste aller unterstützen Anmeldediensten zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-List<String> mit den Namen aller unterstützen Anmeldediensten.
+\texttt{List<String>} mit den Namen aller unterstützen Anmeldediensten.
 
 \subsubsection{\texttt{+ setAcceptPrivacyPolicy(value : boolean)}}%$$$M
 \paragraph*{Beschreibung}
@@ -20,7 +20,7 @@ Speichert, ob der Benutzer den Datenschutz akzeptiert hat.
     \item \texttt{value : boolean} Wert, ob der Benutzer den Datenschutz akzeptiert hat.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection{\texttt{+ isPrivacyAccepted() : Livedata<boolean>}}%$$$M
 \paragraph*{Beschreibung}
@@ -28,7 +28,7 @@ Gibt den Wert zurück, ob der Benutzer den Datenschutz akzeptiert hat.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-Livedata<boolean>, ob der Benutzer den Datenschutz akzeptiert hat.
+\texttt{Livedata<boolean>}, ob der Benutzer den Datenschutz akzeptiert hat.
 
 \subsubsection{\texttt{+ signIn(provider : String) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -41,7 +41,7 @@ Der Aufruf wird an das Model weitergegeben.
     \item \texttt{provider : String} ausgewählter Anmeldedienst.
 \end{itemize}
 \paragraph*{Rückgabewert}
-boolean, ob die Anmeldung erfolgreich war.
+\texttt{boolean}, ob die Anmeldung erfolgreich war.
 
 %----------------------------------------------------------
 \subsubsection{SignInController}
