--- a/Kapitel/02_App/06_Signup/Klassen/SignInModel/main.tex
+++ b/Kapitel/02_App/06_Signup/Klassen/SignInModel/main.tex
@@ -10,7 +10,7 @@ Gibt eine Liste aller unterstützen Anmeldediensten zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-List<String> mit den Namen aller unterstützen Anmeldediensten.
+\texttt{List<String>} mit den Namen aller unterstützen Anmeldediensten.
 
 \subsubsection{\texttt{+ signIn(provider : String) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -24,7 +24,7 @@ Dem Server wird die Anmeldung mitgeteilt. Der Server sendet eine UserId für den
     \item \texttt{provider : String} ausgewählter Anmeldedienst.
 \end{itemize}
 \paragraph*{Rückgabewert}
-boolean, ob die Anmeldung erfolgreich war.
+\texttt{boolean}, ob die Anmeldung erfolgreich war.
 
 %-------------------------------------------------
 \subsubsection{SignInModel}
