--- a/Kapitel/02_App/07_Settings/Klassen/ISettingsModel/main.tex
+++ b/Kapitel/02_App/07_Settings/Klassen/ISettingsModel/main.tex
@@ -12,7 +12,7 @@ Stellt die Sprache der App auf die gegebene Sprache um.
     \item \texttt{language : String} Sprache, in der die App angezeigt werden soll.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ setTheme(theme : Theme)}}%$$$M
 \paragraph*{Beschreibung}
@@ -22,7 +22,7 @@ Stellt die App auf ein gegebenes Theme um.
     \item \texttt{theme : Theme} Theme, in dem die App angezeigt werden soll.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ deleteSearchHistory()}}%$$$M
 \paragraph*{Beschreibung}
@@ -30,7 +30,7 @@ Löscht den Suchverlaufs.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ setStoreSearchHistory(value : boolean)}}%$$$M
 \paragraph*{Beschreibung}
@@ -40,7 +40,7 @@ Setzt den Wert für die Speicherung des Suchverlaufs.
     \item \texttt{value : boolean} Wert, ob der Suchverlauf gespeichert werden soll oder nicht.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ getLanguageIdentifier() : LiveData<String>}}%$$$M
 \paragraph*{Beschreibung}
@@ -48,7 +48,7 @@ Gibt den ISO-639-1-Code der ausgewählten Sprache zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-LiveData<String>, ISO-639-1-Code der ausgewählten Sprache.
+\texttt{LiveData<String>}, ISO-639-1-Code der ausgewählten Sprache.
 
 \subsubsection*{\texttt{+ getSupportedLanguages() : LiveData<List<String>>}}%$$$M
 \paragraph*{Beschreibung}
@@ -56,7 +56,7 @@ Gibt eine Liste der ISO-639-1-Codes der unterstützten Sprachen zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-LiveData<List<String>>, Liste der ISO-639-1-Codes der unterstützten Sprachen.
+\texttt{LiveData<List<String>>}, Liste der ISO-639-1-Codes der unterstützten Sprachen.
 
 \subsubsection*{\texttt{+ getTheme() : LiveData<Theme>}}%$$$M
 \paragraph*{Beschreibung}
@@ -64,7 +64,7 @@ Gibt das aktuell ausgewählte Theme zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-LiveData<Theme>, aktuell ausgewähltes Theme.
+\texttt{LiveData<Theme>}, aktuell ausgewähltes Theme.
 
 \subsubsection*{\texttt{+ getStoreSearchHistory() : LiveData<boolean>}}%$$$M
 \paragraph*{Beschreibung}
@@ -72,7 +72,7 @@ Gibt zurück, ob der Suchverlauf gespeichert wird.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-LiveData<boolean>, ob der Suchverlauf gespeichert wird (true) oder nicht (false).
+\texttt{LiveData<boolean>}, ob der Suchverlauf gespeichert wird (true) oder nicht (false).
 
 %----------------------------------------------------------
 \subsubsection{SettingsModel}
