--- a/Kapitel/02_App/07_Settings/Klassen/SettingsController/main.tex
+++ b/Kapitel/02_App/07_Settings/Klassen/SettingsController/main.tex
@@ -12,7 +12,7 @@ Prüft, ob die Sprache ein Wert aus getSupportedLanguages() ist und wenn ja, ver
     \item \texttt{language : String} Sprache, in der die App angezeigt werden soll.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ setTheme(theme : Theme)}}%$$$M
 \paragraph*{Beschreibung}
@@ -22,7 +22,7 @@ Veranlasst die Umstellung der App auf ein Theme.
     \item \texttt{theme : Theme} Theme, in dem die App angezeigt werden soll.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ deleteSearchHistory()}}%$$$M
 \paragraph*{Beschreibung}
@@ -30,7 +30,7 @@ Veranlasst die Löschung des Suchverlaufs.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ setStoreSearchHistory(value : boolean)}}%$$$M
 \paragraph*{Beschreibung}
@@ -40,7 +40,7 @@ Veranlasst die Änderung der Speicherung des Suchverlaufs abhängig vom gegebene
     \item \texttt{value : boolean} Wert, ob der Suchverlauf gespeichert werden soll oder nicht.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ getLanguage() : LiveData<String>}}%$$$M
 \paragraph*{Beschreibung}
@@ -48,7 +48,7 @@ Gibt den Namen der ausgewählten Sprache in dieser Sprache zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-LiveData<String>, Name der ausgewählten Sprache in dieser Sprache.
+\texttt{LiveData<String>}, Name der ausgewählten Sprache in dieser Sprache.
 
 \subsubsection*{\texttt{+ getSupportedLanguages() : LiveData<List<String>>}}%$$$M
 \paragraph*{Beschreibung}
@@ -56,7 +56,7 @@ Gibt eine Liste der Namen der unterstützten Sprachen in den entsprechenden Spra
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-LiveData<List<String>>, Liste der Namen der unterstützten Sprachen in den entsprechenden Sprachen.
+\texttt{LiveData<List<String>>}, Liste der Namen der unterstützten Sprachen in den entsprechenden Sprachen.
 
 \subsubsection*{\texttt{+ getTheme() : LiveData<Theme>}}%$$$M
 \paragraph*{Beschreibung}
@@ -64,7 +64,7 @@ Gibt das aktuell ausgewählte Theme zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-LiveData<Theme>, aktuell ausgewähltes Theme.
+\texttt{LiveData<Theme>}, aktuell ausgewähltes Theme.
 
 \subsubsection*{\texttt{+ getStoreSearchHistory() : LiveData<boolean>}}%$$$M
 \paragraph*{Beschreibung}
@@ -72,7 +72,7 @@ Gibt zurück, ob der Suchverlauf gespeichert werden soll (true) oder nicht (fals
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-LiveData<boolean>, ob der Suchverlauf gespeichert werden soll (true) oder nicht (false).
+\texttt{LiveData<boolean>}, ob der Suchverlauf gespeichert werden soll (true) oder nicht (false).
 
 %----------------------------------------------------------
 \subsubsection{SettingsController}
