--- a/Kapitel/02_App/07_Settings/Klassen/Theme/main.tex
+++ b/Kapitel/02_App/07_Settings/Klassen/Theme/main.tex
@@ -19,4 +19,4 @@ Gibt den Namen des Themes auf der aktuellen Sprache zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-String,  Namen des Themes auf der aktuellen Sprache.
+\texttt{String},  Namen des Themes auf der aktuellen Sprache.
