--- a/Kapitel/02_App/08_DocumentViewer/Klassen/DocumentScreen/main.tex
+++ b/Kapitel/02_App/08_DocumentViewer/Klassen/DocumentScreen/main.tex
@@ -20,7 +20,7 @@ Veranlasst bei Betätigung des \dq Zurück-Knopfs \dq{} das Schließen des Texta
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ onClickReturn()}}%$$$M
 \paragraph*{Beschreibung}
@@ -28,4 +28,4 @@ Veranlasst bei Betätigung der Zurückgehen-Funktion des Endgeräts das Schließ
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
