--- a/Kapitel/02_App/08_DocumentViewer/Klassen/DocumentType/main.tex
+++ b/Kapitel/02_App/08_DocumentViewer/Klassen/DocumentType/main.tex
@@ -18,4 +18,4 @@ Gibt die Id des DokumentTypes zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-int, Id des DokumentTypes.
+\texttt{int}, Id des DokumentTypes.
