--- a/Kapitel/02_App/09_DataManagement/DataUpdateController/main.tex
+++ b/Kapitel/02_App/09_DataManagement/DataUpdateController/main.tex
@@ -22,7 +22,7 @@ Ist die Warteschlange leer, wird true zurückgegeben.\\
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-boolean, ob die Aktualisierung erfolgreich war.
+\texttt{boolean}, ob die Aktualisierung erfolgreich war.
 
 \subsubsection*{\texttt{+ updateDatabase() : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -38,7 +38,7 @@ Konnten alle DataUpdater ausgeführt werden, wird true zurückgegeben.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-boolean, ob die Aktualisierung erfolgreich war.
+\texttt{boolean}, ob die Aktualisierung erfolgreich war.
 
 %---------------------------------------------------------
 \subsubsection{DataUpdateController}
