--- a/Kapitel/02_App/09_DataManagement/DataUpdater/main.tex
+++ b/Kapitel/02_App/09_DataManagement/DataUpdater/main.tex
@@ -19,7 +19,7 @@ Für DataUpdater mit gleicher Priorität ist die Reihenfolge der Ausführung ega
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-int, Priorität des DataUpdaters.
+\texttt{int}, Priorität des DataUpdaters.
 
 \subsubsection*{\texttt{+ updateData() : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -33,7 +33,7 @@ In diesem Fall dürfen keine Inkonsistenzen in der Datenbank entstehen.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-boolean, ob die Aktualisierung erfolgreich war.
+\texttt{boolean}, ob die Aktualisierung erfolgreich war.
 
 %-----------------------------------------------
 \subsubsection{GlobalAliasUpdater}
