--- a/Kapitel/02_App/03_Map/01_View/MapObjectMarker/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/MapObjectMarker/main.tex
@@ -15,7 +15,7 @@ Erstellt eine neue MapObjectMarker-Instanz.
     \item \texttt{mapView : MapView} MapView auf der der Marker angezeigt wird.
     \item \texttt{data : DisplayData} Alle Daten, die zur Erstellung des Markers benötigt werden.
     \item \texttt{tileMarkerOverlay : TileMarkerOverlay} TileMarkerOverlay-Instanz, der ein Klick 
-    auf diesen Marker mitgeteilt wird. Darf null sein.
+    auf diesen Marker mitgeteilt wird. Darf \texttt{null} sein.
 \end{itemize}
 
 \subsubsection*{\texttt{+ getMapId() : int}}%$$$M
@@ -24,7 +24,7 @@ Gibt MapId des KartenObjekts des Markers zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-int, MapId des Kartenobjekt des Markers.
+\texttt{int}, MapId des Kartenobjekt des Markers.
 
 \subsubsection*{\texttt{+ onSingleTapConfirmed(e : MotionEvent, mapView : MapView) : boolean}}%$$$M
 \paragraph*{Beschreibung}
@@ -36,7 +36,7 @@ Für die Verarbeitung werden beide Parameter nicht benutzt. Diese sind durch Ove
     \item \texttt{mapView : MapView} MapView auf der der Marker ist.
 \end{itemize}
 \paragraph*{Rückgabewert}
-boolean, gibt true zurück, da das MotionEvent verarbeitet wurde.
+\texttt{boolean}, gibt true zurück, da das MotionEvent verarbeitet wurde.
 
 \subsubsection*{\texttt{+ focusMarkerObject(floorMapExists : boolean) $\lbrace$abstract$\rbrace$}}%$$$M
 \paragraph*{Beschreibung}
@@ -46,7 +46,7 @@ Beschreibt das (graphische) Verhalten des Markers, wenn das zugehörige Objekt f
     \item \texttt{floorMapExists : boolean} Genau dann wahr, wenn es zum (evtl. indirekt) ausgewählten Gebäude eine Etagenkarte gibt.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{\texttt{+ resetFocus() $\lbrace$abstract$\rbrace$}}%$$$M
 \paragraph*{Beschreibung}
@@ -54,7 +54,7 @@ Setzt das Aussehen des Markers zurück, wenn er nicht mehr fokussiert wird.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 %-------------------------------------------------------------
 \subsubsection{BuildingMarker}
@@ -74,7 +74,7 @@ Gibt es keine Etagenkarte, wird der Marker als großer Standort-Pfeil angezeigt.
     \item \texttt{floorMapExists : boolean} Genau dann wahr, wenn es zum (evtl. indirekt) ausgewählten Gebäude eine Etagenkarte gibt.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsubsection*{Weitere Implementierungen}
 Diese Klasse implementiert ebenfalls die abstrakte Methode resetFocus von MapObjectMarker 
@@ -97,7 +97,7 @@ Der Marker als großer Standort-Pfeil angezeigt.
     \item \texttt{floorMapExists : boolean} Genau dann wahr, wenn es zum (evtl. indirekt) ausgewählten Gebäude eine Etagenkarte gibt.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
 \subsection*{Weitere Implementierungen}
 Diese Klasse implementiert ebenfalls die abstrakte Methode resetFocus von MapObjectMarker 
