--- a/Kapitel/02_App/03_Map/03_Model/PositionDataManager/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/PositionDataManager/main.tex
@@ -9,11 +9,11 @@ Diese Klasse erlaubt das Lesen und Schreiben der letzten Position.
 Gibt die letzte gespeicherte Position zurück.
 \paragraph*{Beschreibung}
 Diese Methode gibt die letzte gespeicherte Position zurück. Wurde noch keine Position gespeichert,
-wird eine Default-Position zurückgegeben. Es wird nie null zurückgegeben.
+wird eine Default-Position zurückgegeben. Es wird nie \texttt{null} zurückgegeben.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-IGeoPoint mit letzter gespeicherter Position (oder Default-Wert), ist nie null.
+\texttt{IGeoPoint} mit letzter gespeicherter Position (oder Default-Wert), ist nie \texttt{null}.
 
 \subsubsection*{\texttt{+ savePosition(pos : IGeoPoint)}}%$$$M
 \paragraph*{Beschreibung}
@@ -23,5 +23,5 @@ Speichert eine Position als letzte Position.
     \item \texttt{pos : IGeoPoint} zu speichernde Position.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
