--- a/Kapitel/02_App/03_Map/04_Util/DisplayData/main.tex
+++ b/Kapitel/02_App/03_Map/04_Util/DisplayData/main.tex
@@ -27,7 +27,7 @@ Gibt die Position auf der Karte zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-IGeoPoint mit den Koordinaten.
+\texttt{IGeoPoint} mit den Koordinaten.
 
 \subsubsection*{\texttt{+ getName() : String}}%$$$M
 \paragraph*{Beschreibung}
@@ -35,7 +35,7 @@ Gibt den Anzeigenamen zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-String mit Anzeigenamen.
+\texttt{String} mit Anzeigenamen.
 
 \subsubsection*{\texttt{+ getMapId() : int}}%$$$M
 \paragraph*{Beschreibung}
@@ -43,4 +43,4 @@ Gibt die MapId des Kartenobjekts zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-int MapId des Kartenobjekts.
+\texttt{int} MapId des Kartenobjekts.
