--- a/Kapitel/02_App/05_Search/Klassen/SearchModel/main.tex
+++ b/Kapitel/02_App/05_Search/Klassen/SearchModel/main.tex
@@ -23,7 +23,7 @@ Somit werden auch Vorschläge für falsch geschriebene Suchbegriffe angezeigt.
     \item \texttt{amount : int} Die maximale Anzahl der Elemente der Liste an Suchvorschlägen, nicht negativ.
 \end{itemize}
 \paragraph*{Rückgabewert}
-List<String>, Suchvorschläge, die die Datenbank zurückgegeben hat.
+\texttt{List<String>}, Suchvorschläge, die die Datenbank zurückgegeben hat.
 
  \subsubsection*{\texttt{+ getLastSearches(amount : int) : List<String>}}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -35,7 +35,7 @@ Diese Methode gibt eine Liste der zuletzt gesuchten Suchbegriffe, nach ihrer let
     \item \texttt{amount : int} Die maximale Anzahl der Elemente der Liste an letzten Suchbegriffen.
 \end{itemize}
 \paragraph*{Rückgabewert}
-List<String>, zuletzt gesuchte Suchbegriffe.
+\texttt{List<String>}, zuletzt gesuchte Suchbegriffe.
 
  \subsubsection*{\texttt{+ storeSearchKey(searchKey : String)}}%$$$M
 \paragraph*{Beschreibung}
@@ -45,7 +45,7 @@ Speichert den gegebenen Suchbegriff mit dem aktuellen Datum im Suchverlauf.
     \item \texttt{searchKey : String} Suchbegriff, der gespeichert werden soll.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void.
+\texttt{Void}.
 
  \subsubsection*{\texttt{+ getMapIdBySearchKey(searchKey : String) : int}}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -57,7 +57,7 @@ Diese Methode ermittelt das zu den Suchbegriffen gehörenden Kartenobjekt in der
     \item \texttt{searchKey : String} Suchbegriff, dessen MapId bestimmt werden soll.
 \end{itemize}
 \paragraph*{Rückgabewert}
-int, MapId zum Suchbegriff.
+\texttt{int}, MapId zum Suchbegriff.
 
 
 \subsubsection{SearchModel}
